[gd_scene load_steps=48 format=3 uid="uid://bh2wxgq66ju6t"]

[ext_resource type="Texture2D" uid="uid://0bcywvmwpfee" path="res://assets/background/plx-1.png" id="1_d02gh"]
[ext_resource type="Script" path="res://main.gd" id="1_gfjih"]
[ext_resource type="Texture2D" uid="uid://ciis5ilirsbem" path="res://assets/background/plx-2.png" id="2_oxjng"]
[ext_resource type="Texture2D" uid="uid://cb33nudts8xn" path="res://assets/background/plx-3.png" id="3_y6me8"]
[ext_resource type="Texture2D" uid="uid://h08dx2quvqrc" path="res://assets/background/plx-4.png" id="4_hdt1d"]
[ext_resource type="Texture2D" uid="uid://b7h8s7w025o38" path="res://assets/background/plx-5.png" id="5_148tj"]
[ext_resource type="Texture2D" uid="uid://dvkf7qik0qd8y" path="res://assets/background/ground.png" id="6_5t2k3"]
[ext_resource type="Texture2D" uid="uid://b2why3exr0iyd" path="res://assets/sprites/Rawder_idle_without_gun.png" id="6_quluk"]
[ext_resource type="Texture2D" uid="uid://d1famotvsbo1r" path="res://assets/sprites/jump.png" id="7_g6v4t"]
[ext_resource type="Script" path="res://Rawder.gd" id="7_ipwwy"]
[ext_resource type="Texture2D" uid="uid://d1mh55g4w4os7" path="res://assets/sprites/Rawder_walk_without_gun.png" id="8_gxlt0"]
[ext_resource type="Texture2D" uid="uid://bgrr4xx3p4fk6" path="res://assets/sprites/rawder_cruched_down.png" id="9_m58uw"]
[ext_resource type="AudioStream" uid="uid://c4ns4h4rc4e5a" path="res://assets/sound/impact-ground.mp3" id="9_r2l68"]
[ext_resource type="Texture2D" uid="uid://bybwxtjsigist" path="res://assets/sprites/rawder_dead.png" id="10_r0wv5"]
[ext_resource type="Script" path="res://ExitBtn.gd" id="14_xugre"]
[ext_resource type="AudioStream" uid="uid://c000r8miixxef" path="res://assets/sound/dead.wav" id="15_wv5ny"]
[ext_resource type="AudioStream" uid="uid://d1evvck8vccko" path="res://assets/sound/stage_2.ogg" id="17_fip11"]
[ext_resource type="FontFile" uid="uid://bs5ol2jl4rgkt" path="res://assets/fonts/pokemon-emerald-pro.ttf" id="17_uxg2y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35vx3"]
size = Vector2(2304, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5rq7"]
atlas = ExtResource("9_m58uw")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlerv"]
atlas = ExtResource("10_r0wv5")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_np4x4"]
atlas = ExtResource("10_r0wv5")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ols"]
atlas = ExtResource("10_r0wv5")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipmbh"]
atlas = ExtResource("10_r0wv5")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_suyuh"]
atlas = ExtResource("10_r0wv5")
region = Rect2(180, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8tka"]
atlas = ExtResource("10_r0wv5")
region = Rect2(225, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqw17"]
atlas = ExtResource("10_r0wv5")
region = Rect2(270, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hd5k"]
atlas = ExtResource("10_r0wv5")
region = Rect2(315, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_flssl"]
atlas = ExtResource("6_quluk")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp2yc"]
atlas = ExtResource("6_quluk")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmey3"]
atlas = ExtResource("6_quluk")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_136ad"]
atlas = ExtResource("6_quluk")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnkxy"]
atlas = ExtResource("7_g6v4t")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec5aq"]
atlas = ExtResource("7_g6v4t")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_15632"]
atlas = ExtResource("7_g6v4t")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_tep2m"]
atlas = ExtResource("8_gxlt0")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2771"]
atlas = ExtResource("8_gxlt0")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhcsa"]
atlas = ExtResource("8_gxlt0")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypbpj"]
atlas = ExtResource("8_gxlt0")
region = Rect2(135, 0, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_7icbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5rq7")
}],
"loop": true,
"name": &"cruched_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlerv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np4x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ols")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipmbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suyuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8tka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqw17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hd5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqw17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hd5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqw17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hd5k")
}],
"loop": true,
"name": &"dead",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flssl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp2yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmey3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_136ad")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnkxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec5aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15632")
}],
"loop": true,
"name": &"jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tep2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2771")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhcsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypbpj")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_box3v"]
size = Vector2(60, 129)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssele"]
bg_color = Color(0.107375, 0.40004, 0.461852, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugmgs"]
bg_color = Color(0.176866, 0.586525, 0.674406, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nvqj"]
bg_color = Color(0.0653314, 0.286409, 0.333534, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_duqtx"]
bg_color = Color(0.421505, 0, 0.150476, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6w3o"]
bg_color = Color(0.98677, 0.494776, 0.471813, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy2ea"]
bg_color = Color(0.481304, 0, 0.0605219, 1)

[node name="TheAdventure" type="Node"]
script = ExtResource("1_gfjih")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("1_d02gh")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("2_oxjng")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer2"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("3_y6me8")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer3"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("4_hdt1d")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(0.9, 1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer4"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("5_148tj")
centered = false

[node name="Floor" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
texture_filter = 1
position = Vector2(0, 552)
scale = Vector2(2, 3)
texture = ExtResource("6_5t2k3")
centered = false

[node name="FloorCol" type="CollisionShape2D" parent="Floor"]
position = Vector2(1152, 606.5)
shape = SubResource("RectangleShape2D_35vx3")

[node name="Rawder" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(197, 495)
script = ExtResource("7_ipwwy")

[node name="Animation" type="AnimatedSprite2D" parent="Rawder"]
texture_filter = 1
position = Vector2(5, -19)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_7icbn")
animation = &"dead"
autoplay = "idle"

[node name="PolygonCol" type="CollisionPolygon2D" parent="Rawder"]
position = Vector2(-8, -19)
polygon = PackedVector2Array(-22, 87, 16, 88, 17, 77, 9, 77, 9, 63, 20, 61, 23, 33, 15, 27, 24, 13, 26, -27, 15, -42, -41, -43, -50, -28, -53, 16, -44, 23, -56, 36, -54, 61, -41, 61, -40, 73, -49, 79, -47, 88)

[node name="RunCol" type="CollisionShape2D" parent="Rawder"]
position = Vector2(-10, -7)
shape = SubResource("RectangleShape2D_box3v")

[node name="JumpSound" type="AudioStreamPlayer" parent="Rawder"]
stream = ExtResource("9_r2l68")

[node name="DeadSound" type="AudioStreamPlayer" parent="Rawder"]
stream = ExtResource("15_wv5ny")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
texture_filter = 1
offset_right = 83.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("17_uxg2y")
theme_override_font_sizes/font_size = 60
text = "SCORE:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartLabel" type="Label" parent="HUD"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("17_uxg2y")
theme_override_font_sizes/font_size = 60
text = "PRESS SPACE TO PLAY"

[node name="HighScoreLabel" type="Label" parent="HUD"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("17_uxg2y")
theme_override_font_sizes/font_size = 60
text = "HIGH SCORE:"

[node name="RestartBtn" type="Button" parent="HUD"]
offset_left = 449.0
offset_top = 292.0
offset_right = 699.0
offset_bottom = 353.0
theme_override_fonts/font = ExtResource("17_uxg2y")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_ssele")
theme_override_styles/hover = SubResource("StyleBoxFlat_ugmgs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4nvqj")
text = "RESTART"

[node name="ExitBtn" type="Button" parent="HUD"]
texture_filter = 1
offset_left = 449.0
offset_top = 410.0
offset_right = 699.0
offset_bottom = 471.0
theme_override_fonts/font = ExtResource("17_uxg2y")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_duqtx")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6w3o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vy2ea")
text = "EXIT"
script = ExtResource("14_xugre")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="AudioStage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_fip11")
volume_db = -12.0
